@@ -1,0 +1,1 @@
+{{  [[NSArray arrayWithObjects:nil] componentsJoinedByString:@"x"]  }}
